--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "LinkedIn AutoConnect",
   "version": "1.0",
   "host_permissions": ["https://www.linkedin.com/search/results/people/*"],
-  "permissions": ["tabs", "scripting", "notifications", "declarativeContent"],
+  "permissions": ["tabs", "storage", "notifications", "declarativeContent"],
   "icons": {
     "16": "assets/icon-16.png",
     "24": "assets/icon-24.png",
